feat:支持显示AI系列名称